# rust-fullstack-web-application

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md
.hooks/: pre-push
backend/: Cargo.toml
backend/src/: auth.rs  dtos.rs  enums.rs  environment.rs  error.rs  facade.rs  lib.rs  main.rs  middleware.rs  model.rs  router.rs  service.rs  types.rs  utils.rs
backend/src/dtos/: admin_request.rs  admin_response.rs  guest_request.rs  guest_response.rs  user_request.rs  user_response.rs
backend/src/environment/: service.rs
backend/src/facade/: admin.rs  guest.rs  user.rs
backend/src/middleware/: transaction.rs
backend/src/router/: admin.rs  guest.rs  user.rs
backend/src/service/: access_control.rs  blog.rs  database.rs  user.rs
backend/src/service/database/: document.rs  memory_service.rs  mongodb_service.rs  service.rs  smart_document.rs  transaction.rs
frontend/: Cargo.toml  index.html  index.scss
frontend-server/: Cargo.toml
frontend-server/src/: environment.rs  lib.rs  main.rs  middleware.rs
frontend/src/: app.rs  component.rs  enums.rs  environment.rs  error.rs  lib.rs  main.rs  model.rs  page.rs  types.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/component/: footer.rs  header.rs  post_details.rs  post_form.rs  post_list.rs  user_list.rs
frontend/src/page/: admin.rs  home.rs  login.rs  not_found.rs  register.rs
frontend/src/service/: api.rs  auth.rs
infra/: .dockerignore  Dockerfile-backend  Dockerfile-frontend  Dockerfile-integrated  Justfile  docker-compose-external.yml  docker-compose-integrated.yml  dockercompose.yml  nginx.conf
