[package]
name = "frontend-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Async
tokio = "1.48.0"
# Logging dependencies
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }
# Web application framework
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
